@@ -1,0 +1,70 @@
+//
+// Unit tests for UseNoInliningWithGetCallingAssemblyRule
+//
+// Authors:
+//	Sebastien Pouliot <sebastien@ximian.com>
+//
+// Copyright (C) 2010 Novell, Inc (http://www.novell.com)
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+//
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+//
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+//
+
+using System;
+using System.Reflection;
+using System.Runtime.CompilerServices;
+
+using Gendarme.Rules.Correctness;
+
+using NUnit.Framework;
+using Test.Rules.Definitions;
+using Test.Rules.Fixtures;
+
+namespace Test.Rules.Correctness {
+
+	[TestFixture]
+	public class UseNoInliningWithGetCallingAssemblyTest : MethodRuleTestFixture<UseNoInliningWithGetCallingAssemblyRule> {
+
+		[Test]
+		public void DoesNotApply ()
+		{
+			AssertRuleDoesNotApply (SimpleMethods.ExternalMethod);
+			AssertRuleDoesNotApply (SimpleMethods.EmptyMethod);
+		}
+
+		public void Bad ()
+		{
+			Console.WriteLine (Assembly.GetCallingAssembly ().Location);
+		}
+
+		[MethodImpl (MethodImplOptions.NoInlining)]
+		public void Good ()
+		{
+			Console.WriteLine (Assembly.GetCallingAssembly ().Location);
+		}
+
+		[Test]
+		public void GetCallingAssembly ()
+		{
+			AssertRuleFailure<UseNoInliningWithGetCallingAssemblyTest> ("Bad");
+			AssertRuleSuccess<UseNoInliningWithGetCallingAssemblyTest> ("Good");
+		}
+	}
+}
+
